--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 "\n\nCelsius temperature is " + celcius);
         } else if (entry != 999) {
             alert("You entered " + entry +
-                "\nEntry must by a valid number from -100 through +212\n" +
+                "\nEntry must range from -100 through +212\n" +
                 "Or enter 999 to end entries");
         }
     }
